2023-08-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mcs51/Makefile.in: reverted accidental commit

2023-08-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/asm/default/features.h,
	* device/include/asm/ds390/features.h,
	* device/include/asm/mcs51/features.h,
	* device/include/asm/pic14/features.h,
	* device/include/asm/pic16/features.h,
	* device/include/asm/r2k/features.h,
	* device/include/asm/r3ka/features.h,
	* device/include/asm/sm83/features.h,
	* device/include/asm/stm8/features.h,
	* device/include/asm/tlcs90/features.h,
	* device/include/asm/z80/features.h: added __SDCC_NONBANKED
	* device/include/float.h: use __SDCC_NONBANKED for __SDCC_FLOAT_NONBANKED
	* device/include/sdcc-lib.h: cosmetics
	* device/lib/_divsint.c,
	* device/lib/_divslong.c,
	* device/lib/_divslonglong.c,
	* device/lib/_divuint.c,
	* device/lib/_divulong.c,
	* device/lib/_divulonglong.c,
	* device/lib/_modsint.c,
	* device/lib/_modslong.c,
	* device/lib/_modslonglong.c,
	* device/lib/_moduint.c,
	* device/lib/_modulong.c,
	* device/lib/_modulonglong.c,
	* device/lib/_mulint.c,
	* device/lib/_mullong.c,
	* device/lib/_mullonglong.c: moved __SDCC_NONBANKED to sdcc-lib.h
	* device/lib/_slonglong2fs.c: cosmetics
	* device/lib/Makefile.in,
	* device/lib/hc08/Makefile.in,
	* device/lib/mos6502/Makefile.in,
	* device/lib/mos6502-stack-auto/Makefile.in,
	* device/lib/mos65c02/Makefile.in,
	* device/lib/pdk13/Makefile.in,
	* device/lib/pdk14/Makefile.in,
	* device/lib/pdk15/Makefile.in,
	* device/lib/pdk15-stack-auto/Makefile.in,
	* device/lib/s08/Makefile.in,
	* device/lib/s08-stack-auto/Makefile.in,
	* device/lib/stm8/Makefile.in,
	* device/lib/stm8-large/Makefile.in,
	* src/SDCCsymt.c (initCSupport): renamed _r[lr][su]longlong.c to
	  _s[lr][su]longlong.c because they are shifts not rotates
	* device/lib/_slslonglong.c: renamed from _rlslonglong.c,
	  moved __SDCC_NONBANKED to sdcc-lib.h
	* device/lib/_slulonglong.c: renamed from _rlulonglong.c,